force-app/main/default/objects/ASEAN_Product_Summary__c/ASEAN_Product_Summary__c.object-meta.xml
<CustomObject>
    <label>ASEAN Product Summary</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASEAN Product Summarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>