force-app/main/default/objects/ASEAN_Product_Summary__c/fields/AC_Month_Qty_LY__c.field-meta.xml
<CustomField>
    <fullName>AC_Month_Qty_LY__c</fullName>
    <label>AC Month Qty LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>