force-app/main/default/objects/ASEAN_Product_Summary__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>年月+ 国家</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>