force-app/main/default/objects/ASEAN_Product_Summary__c/fields/Ref_Month_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ref_Month_Qty__c</fullName>
    <label>Ref Month Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>