force-app/main/default/objects/ASEAN_Product_Summary__c/fields/Ref_Year_Qty__c.field-meta.xml
<CustomField>
    <fullName>Ref_Year_Qty__c</fullName>
    <label>Ref Year Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>