force-app/main/default/objects/ASEAN_Product_Summary__c/fields/Total_Year_Qty_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_Qty_LY__c</fullName>
    <label>Total Year Qty LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>