force-app/main/default/objects/ASEAN_Product_Summary__c/fields/Total_YoY_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_YoY_Year__c</fullName>
    <label>Total YoY Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>