force-app/main/default/objects/ASEAN_Product_Summary__c/fields/TV_Month_Qty_LY__c.field-meta.xml
<CustomField>
    <fullName>TV_Month_Qty_LY__c</fullName>
    <description>去年同月的数量</description>
    <label>TV Month Qty LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>