force-app/main/default/objects/ASEAN_Product_Summary__c/fields/TV_Today_Qty__c.field-meta.xml
<CustomField>
    <fullName>TV_Today_Qty__c</fullName>
    <description>当天TV数量</description>
    <label>TV Today Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>