force-app/main/default/objects/ASEAN_Product_Summary__c/fields/TV_Year_Qty__c.field-meta.xml
<CustomField>
    <fullName>TV_Year_Qty__c</fullName>
    <description>年数量</description>
    <label>TV Year Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>