force-app/main/default/objects/ASEAN_Product_Summary__c/fields/TV_Year_Qty_LY__c.field-meta.xml
<CustomField>
    <fullName>TV_Year_Qty_LY__c</fullName>
    <description>过去年累计</description>
    <label>TV Year Qty LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>