force-app/main/default/objects/ASEAN_Product_Summary__c/fields/TV_YoY_Month__c.field-meta.xml
<CustomField>
    <fullName>TV_YoY_Month__c</fullName>
    <label>TV YoY Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>