force-app/main/default/objects/ASEAN_Product_Summary__c/fields/WM_Today_Qty__c.field-meta.xml
<CustomField>
    <fullName>WM_Today_Qty__c</fullName>
    <label>WM Today Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>